# deluge

./: Cargo.toml  Makefile  README.md  animation.html
.github/workflows/: main-checks.yml  rust.yml
images/: animation.html  process.webm
src/: deluge.rs  deluge_ext.rs  into_deluge.rs  iter.rs  lib.rs
src/helpers/: indexable_stream.rs  mod.rs  preloaded_futures.rs
src/ops/: all.rs  all_par.rs  any.rs  any_par.rs  chain.rs  collect.rs  collect_par.rs  count.rs  filter.rs  filter_map.rs  first.rs  fold.rs  fold_par.rs  last.rs  map.rs  mod.rs  take.rs  zip.rs
