[package]
name = "deluge"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
parallel = []
tokio = ["parallel", "dep:tokio"]
async-std = ["parallel", "dep:async-std"]

[dependencies]
async-std = { version = "1.12", optional = true }
futures = "0.3"
more-asserts = "0.3"
num_cpus = "1.13"
pin-project = "1.0"
tokio = { version = "1.20", features = ["sync"], optional = true }

[dev-dependencies]
more-asserts = "0.3"
tokio = { version = "1.20", features = ["full"] }
