[package]
name = "deluge"
version = "0.1.8"
authors = ["Michał Kawalec <michal@monad.cat>"]
license = "MPL-2.0"
description = """
A highly concurrent stream library driving the underlying futures
either concurrently or in parallel to process streaming operations
as quickly as possible.
"""
readme = "README.md"
homepage = "https://github.com/mkawalec/deluge"
repository = "https://github.com/mkawalec/deluge"
documentation = "https://docs.rs/deluge/latest/deluge/"
keywords = ["futures", "async", "deluge"]
categories = ["asynchronous"]
edition = "2021"
exclude = [
    ".github/*",
    ".gitignore",
    "Makefile",
    "images/*",
]

[features]
default = ["tokio"]
async-runtime = []
tokio = ["dep:tokio", "async-runtime"]
async-std = ["dep:async-std", "async-runtime"]

[dependencies]
async-std = { version = "1.12", features = ["attributes"], optional = true }
futures = "0.3"
num_cpus = "1.13"
pin-project = "1.0"
tokio = { version = "1.20", features = ["sync"], optional = true }

[dev-dependencies]
more-asserts = "0.3"
tokio = { version = "1.20", features = ["full"] }
